# ai_flywheel

./: .env.example  .gitignore  .importlinter  Dockerfile  README.md  alembic.ini  demo.py  demo_ingestion.py  demo_lead_gen.py  demo_step2.py  demo_step3_4.py  demo_step5.py  demo_step6.py  deploy.sh  docker-compose.yml  fly.toml  pyproject.toml  run_api.py  seed_traces.py
ai_flywheel/: __init__.py  worker.py
ai_flywheel/api/: main.py
ai_flywheel/api/middleware/: __init__.py  venture_context.py
ai_flywheel/api/routers/: __init__.py  agents.py  auth.py  blueprints.py  costs.py  deployments.py  discovery.py  embeddings.py  experiments.py  feedback.py  health.py  ingest.py  knowledge_graph.py  market.py  memory.py  ml.py  offers.py  patterns.py  policies.py  product.py  prompts.py  quality.py  reviews.py  thesis.py  tools.py  ventures.py  workflows.py
ai_flywheel/channels/: __init__.py  cli.py  slack.py
ai_flywheel/core/: __init__.py  auth.py  config.py  database.py  events.py  llm.py  tasks.py  traces.py
ai_flywheel/core/contracts/: __init__.py  events.py  schemas.py
ai_flywheel/core/models/: __init__.py  base.py  costs.py  events.py  traces.py  venture.py
ai_flywheel/modules/: __init__.py
ai_flywheel/modules/agent_runtime/: __init__.py  llm_gateway.py
ai_flywheel/modules/cross_venture/: __init__.py
ai_flywheel/modules/data_knowledge/: __init__.py
ai_flywheel/modules/deployment/: __init__.py
ai_flywheel/modules/experimentation/: __init__.py  learning_loop.py
ai_flywheel/ventures/: __init__.py  context.py  schemas.py  service.py
ai_flywheel/workflows/: sample.py  venture_lifecycle.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_phase1_to_6_models.py  0003_venture_intelligence.py
docs/: README.md  architecture.md  auth-rbac.md  b2c-validation-flow.md  build-phases.md  builder-engine.md  database-schema.md  feature-loop.md  feedback-loops.md  high-availability.md  infrastructure.md  integrations.md  interaction-model.md  module-isolation.md  package-structure.md  reference-implementations.md  session-threading.md  state-management.md  tech-stack.md  temporal-patterns.md  validation-config.md  validation-framework.md  ventures.md  vision.md
docs/modules/: README.md  category-a-intelligence.md  category-b-data-engineering.md  category-c-ml-pipeline.md  category-d-agent-infra.md  category-e-experimentation.md  category-f-operations.md  system-1-core-kernel.md  system-2-agent-runtime.md  system-3-data-knowledge.md  system-4-ml-evaluation.md  system-5-product-intelligence.md  system-6-experimentation.md  system-7-deployment.md  system-8-cross-venture.md
flywheel/: __init__.py  env.py
flywheel/agents/: __init__.py  crawl_agent.py
flywheel/core/: __init__.py  agent.py  crawl_agent.py  events.py  inferencer.py  node.py  substrate.py  timers.py
flywheel/devserver/: __init__.py  app.py  topology.py
flywheel/libraries/: __init__.py  ads_client.py  analytics_client.py  api_fetch_client.py  billing_client.py  calendar_client.py  email_client.py  inbound_collector.py  job_board_client.py  lead_store.py  linkedin_posting_client.py  llm_gateway.py  semrush_client.py  slack_client.py  transcription_client.py  web_scraper_client.py  web_search_client.py
flywheel/nodes/: __init__.py  _ingestion_seed.py  ad_analytics_collector.py  ad_campaign_runner.py  company_needs_analyzer.py  customer_survey.py  founder_notifier.py  human_review_queue.py  input_intake.py  insight_inferrer.py  knowledge_builder.py  lead_sourcer.py  market_scanner.py  pain_extractor.py  pitch_generator.py  post_analytics_collector.py  post_drafter.py  post_scheduler.py  signal_analyzer.py  source_registry.py  source_scraper.py  subscription_manager.py  thesis_tracker.py
flywheel/persistence/: __init__.py  alembic.ini  base.py  knowledge_store.py  models.py  raw_record_store.py  source_store.py  sql_models.py  sql_stores.py
flywheel/persistence/alembic/: env.py
flywheel/venture/: __init__.py  loader.py  registry.py  schema.py  view.py
frontend/: Dockerfile  fly.toml  next.config.ts  package-lock.json  package.json
new_docs/: README.md  layer1-nodes.md  scraping-engine.md  stack.md  venture-file.md  venture-walkthrough.md  vision.md  visualization.md
tests/: conftest.py  test_ad_nodes.py  test_agent.py  test_api_fetch_client.py  test_ats_clients.py  test_company_needs_analyzer.py  test_crawl_agent.py  test_customer_survey.py  test_describe.py  test_devserver.py  test_devserver_ingestion.py  test_env_loader.py  test_event_bus.py  test_firecrawl_scraper.py  test_founder_notifier.py  test_html_scraper.py  test_human_review_queue.py  test_inferencer.py  test_ingestion_flow.py  test_input_intake.py  test_insight_inferrer.py  test_knowledge_builder.py  test_lead_gen_flow.py  test_lead_gen_live_wiring.py  test_lead_sourcer.py  test_lead_sourcer_crawl.py  test_libraries.py  test_libraries_lead_gen.py  test_libraries_step3.py  test_libraries_step4c.py  test_libraries_step5.py  test_litellm_gateway.py  test_live_venture_selection.py  test_market_scanner.py  test_pain_extractor.py  test_persistence_neon.py  test_persistence_stores.py  test_pitch_generator.py  test_post_analytics_collector.py  test_post_drafter.py  (+14 more)
tests/unit/: test_ab_testing.py  test_agent_factory.py  test_cli.py  test_config.py  test_contracts.py  test_cost_optimizer.py  test_customer_discovery.py  test_data_quality.py  test_deployment.py  test_embeddings.py  test_evaluation.py  test_events.py  test_feature_factory.py  test_feedback.py  test_human_review.py  test_ingestor.py  test_knowledge_graph.py  test_labeling.py  test_market_intelligence.py  test_memory_engine.py  test_meta_learning.py  test_model_forge.py  test_offer_design.py  test_pattern_library.py  test_policy_engine.py  test_privacy.py  test_product_experience.py  test_prompt_studio.py  test_reliability.py  test_simulation.py  test_slack.py  test_synthetic_data.py  test_tool_forge.py  test_traces.py  test_venture_thesis.py  test_ventures.py  test_workflow_blueprint.py
ventures/: lead_sources.yaml  postlineai-live.yaml  postlineai.yaml
(+173 files in other folders)
