[project]
name = "ai-flywheel"
version = "0.1.0"
description = "A personal venture operating system — bottom-up, event-driven Layer 1 substrate."
readme = "new_docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
    # Small, broadly-useful HTTP + retry clients. Promoted to core (from the
    # optional lead-gen extra) so the real ATS clients never fail on a missing
    # dep in an under-provisioned venv. httpx also backs the api-fetch-client
    # (lazy-imported; the fake path needs none). The heavier provider SDKs
    # (litellm, firecrawl-py) stay opt-in in [lead-gen].
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
# Durable persistence for the public-data ingestion cluster. Sync SQLAlchemy +
# psycopg3 against Neon Postgres (any Postgres; swappable via DB_URL). Optional
# because the in-memory fakes keep the dev demo + unit tests zero-infra.
db = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
]
# The dev introspection server (see new_docs/visualization.md). This is a
# dev-only, read-only surface — NOT the venture runtime or a production API.
devserver = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# Heavier, opt-in provider SDKs for LIVE lead-gen (per new_docs/stack.md "lazy
# arrival"). httpx + tenacity are now core, so the real ATS discovery works
# without this extra. These add the paid/network reasoning + enrichment:
#   - litellm: real multi-provider llm-gateway (LiteLLMGateway) for the agentic
#     lead-gen nodes. Requires a provider key (e.g. OPENAI_API_KEY) at runtime.
#   - firecrawl-py: career-page enrichment (requires FIRECRAWL_API_KEY).
# The default (fake/offline) venture needs none of this.
lead-gen = [
    "litellm>=1.40",
    "firecrawl-py>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "types-PyYAML>=6.0",
    # Persistence stack (so the gated Neon integration suite can run in dev).
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    # Auto-load a gitignored repo-root .env for the dev server + demos, so keys
    # (OPENAI_API_KEY, FIRECRAWL_API_KEY, FLYWHEEL_VENTURE, ...) don't have to be
    # exported by hand or pasted into the tracked launch.json. Dev-only; loading
    # is guarded so prod/CI without dotenv is unaffected.
    "python-dotenv>=1.0",
    # For VS Code Python debugging (the extension bundles its own copy too,
    # but having it in the venv makes the env self-sufficient).
    "debugpy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flywheel"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
